Search box above fields/values in edit mode is not styled correctly on FF - Remove horizontal scrollbar on report build view

--- a/app/assets/stylesheets/reports.scss
+++ b/app/assets/stylesheets/reports.scss
@@ -120,6 +120,7 @@ ul.reports-list {
 		background-repeat: no-repeat;
 		-webkit-border-radius: 20px;
 		box-sizing: border-box;
+		-moz-box-sizing: border-box;
 		border-radius: 20px;
 		padding-left: 7%;
 		padding-right: 17%;
